setup react hello world

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    Hello World
-    <div id="container"></div>
+    <div id="mount"></div>
     <script type="text/javascript" src="/js/bundle.js"></script>
 </body>
 
