(refactor) updated webpack config, setup production settings, setup dev settings, refactored server file structure

--- a/app/assets/index.scss
+++ b/app/assets/index.scss
@@ -1,3 +1,7 @@
+@import url('//cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css');
+@import url('//fonts.googleapis.com/css?family=Roboto');
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
+
 html, body {
     font-family: 'Roboto', sans-serif;
 }
