--- a/app/assets/index.scss
+++ b/app/assets/index.scss
@@ -1,35 +1,51 @@
-@import url('//cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css');
+@import '~bootstrap/scss/bootstrap';
 @import url('//fonts.googleapis.com/css?family=Roboto');
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
 
 html, body {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .margin-top-50 {
-    margin-top: 50px
+  margin-top: 50px
 }
 
 .margin-vert-30 {
-    margin: 30px 0;
+  margin: 30px 0;
 }
 
-/*buttons/ links*/
+// BUTTONS / LINKS
 .react-link{
-    cursor: pointer; 
-    cursor: hand;
-}
-.react-link-underline{
-    color: blue;
+  cursor: pointer; 
+  cursor: hand;
 }
 
-.btn-inline {
-    float: left;
-    margin: 0 3px;
+.react-link-underline{
+  color: blue;
 }
 
 .btn-auth {
-    width: 100px;  
+  margin: 0 .10rem;
+  width: calc(33% - .2rem);
+}
+
+.btn-auth-settings {
+  width: 100%;
+}
+
+
+@media(max-width:34em){
+  .btn-auth {
+    width: 100%;
+    height: 60px;
+    border-radius: 0;
+    margin: 0;
+  }
+}
+
+// nav
+.navbar{
+  border-radius:0;
 }
 
 
